--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -153,7 +153,7 @@ hr
       visibility: hidden
       display: none
 
-    &:active, &:focus, .tab-active
+    &:active, &:focus, &.tab-active
 
       border-color: $primaryColor
       color: $primaryColor
