Fixed an issue where the carousel would run even if the tab wasn't focused. Would cause weird behaviour when the tab refocuses due to how browsers work

--- a/views/index.jade
+++ b/views/index.jade
@@ -60,6 +60,9 @@ block head
             let $current = $(".current");
             let $slide = $(".slide");
             function nextElement() {
+                if(document.hidden) // Do nothing if the document is hidden
+                    return;
+
                 if (++carouselIndex > carouselValues.length - 1) carouselIndex = 0;
 
                 $next.find("h3").text(carouselValues[carouselIndex]);
