--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -330,7 +330,10 @@ button
   border-bottom: 3px solid darken($primaryColor, 10%)
   border-radius: 5px
   font: 14px "Bitter", serif
-  &:active
+  &:active, &:disabled
     background-color: darken($primaryColor, 10%)
     line-height: 0.9em
     padding-top: 0.9em
+  &:disabled
+    color: lighten($grayColor, 10%)
+
