Converted images to webp

--- a/views/index.jade
+++ b/views/index.jade
@@ -59,7 +59,7 @@ block head
 
         // Load image post-HTML parse for faster render speeds
         $("#me").ready(function() {
-            $("#me").attr("src", "images/buggy.jpg");
+            $("#me").attr("src", "images/buggy.webp");
         })
 
         $("#carousel").ready(function() {
@@ -201,7 +201,7 @@ block content
                             a(href="https://minecraft.curseforge.com/projects/animated-crosshair") Animated Crosshair
 
                 div.right-image
-                    img(src="images/quickplay.png").screenshot
+                    img(src="images/quickplay.webp").screenshot
                     p.subtext Screenshot of Quickplay Minecraft Mod
             div#karaoke.tab-content
                 div.left-text
@@ -219,7 +219,7 @@ block content
                     p
                         a(href="https://hypixelkaraoke.me/") Click here to visit it.
                 div.right-image
-                    img(src="images/karaoke-dashboard.png").screenshot
+                    img(src="images/karaoke-dashboard.webp").screenshot
                     p.subtext Screenshot of the team's private dashboard for handling events
             div#watchdogger.tab-content
                 div.left-text
@@ -237,7 +237,7 @@ block content
                     p
                         a(href="https://bugg.co/watchdogger") Click here to visit it.
                 div.right-image
-                    img(src="images/watchdog.png").screenshot
+                    img(src="images/watchdog.webp").screenshot
             //div#image-sharing.tab-content
             //    div
             //        h3 Image Sharing
@@ -271,7 +271,7 @@ block content
                 div.tl-item
                     div.tl-item-content
                         div.tl-img
-                            img(src="images/php.png")
+                            img(src="images/php.webp")
                         h3.tl-title First Programming Language
                         h4.subtext ca. 2014
                         p I started to learn programming at the early age of 13. Websites were fascinating to me and
@@ -296,7 +296,7 @@ block content
                 div.tl-item
                     div.tl-item-content
                         div.tl-img
-                            img(src="images/nova.png")
+                            img(src="images/nova.webp")
                         h3.tl-title Northern Virginia Community College
                         h4.subtext August 2017 - May 2018
                         p As an intermediary between graduating highschool and attending a four year university, I decided
@@ -305,7 +305,7 @@ block content
                 div.tl-item
                     div.tl-item-content
                         div.tl-img
-                            img(src="images/rpi.png")
+                            img(src="images/rpi.webp")
                         h3.tl-title Rensselaer Polytechnic Institute
                         h4.subtext August 2018 - Present
                         p I started attending Rensselaer Polytechnic Institute in the 2018 Fall semester, located in
