updated metadata added google tracking

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,13 +14,12 @@ html
 
     - defaultColor = "#31A56F"
     - pageName = "Erik Roberts"
-    - description = "Full-stack Developer, Hypixel Moderator"
+    - description = "Hi, my name is Erik Roberts, full-stack developer."
     - pageUrl = "https://bugg.co/"
 
     title= title
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel='icon', href='/favicon.ico?', type="image/x-icon")
-
 
     meta(name='Content-Type', content='text/html', charset='utf-8')
     meta(name="description", content=description)
@@ -46,6 +45,7 @@ html
     meta(name="theme-color", content=defaultColor)
     meta(name="msapplication-TileColor", content=defaultColor)
     meta(name="msapplication-navbutton-color", content=defaultColor)
+    meta(name="google-site-verification" content="jjl0LF3KeQ74RgGDiRif7d1f2N13eFpXU5jvemRrLWA")
 
     // /Meta data
     block head
