--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,7 @@ html
     link(rel='icon', href='/favicon.ico?', type="image/x-icon")
 
     meta(name='Content-Type', content='text/html', charset='utf-8')
-    meta(name="description", content=description)
+    meta(name="description", content="Home page for Erik Roberts, full-stack developer. Learn about me and my projects.")
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="apple-mobile-web-app-title", content=pageName)
     meta(name="application-name", content=pageName)
