"Ultimate cat-lover"

--- a/views/index.jade
+++ b/views/index.jade
@@ -45,7 +45,8 @@ block head
         let carouselValues = [
             "Full-stack developer",
             "Hypixel Moderator",
-            "RPI Student"
+            "RPI Student",
+            "Ultimate Cat-lover"
         ]
         let carouselIndex = 0;
 
@@ -309,7 +310,7 @@ block content
                         h3.tl-title Rensselaer Polytechnic Institute
                         h4.subtext August 2018 - Present
                         p I started attending Rensselaer Polytechnic Institute in the 2018 Fall semester, located in
-                            | Troy, NY. I am currently studying Computer Science and plan on minoring in Philosophy.
+                            | Troy, NY. I am currently studying Computer Science and plan on minoring in Philosophy.div.tl-item
 
         div#skills
             h2 Skills
