--- a/views/index.jade
+++ b/views/index.jade
@@ -264,6 +264,8 @@ block content
                 div#tl-line
                 div.tl-item
                     div.tl-item-content
+                        div.tl-img
+                            img(src="images/young.webp")
                         h3.tl-title Birthday
                         h4.subtext September 10th, 1999
                         //- - let an = [8,11,18,80,81,82,83,84,85,86,87,88,89].includes(age) ? "an" : "a"
@@ -290,6 +292,8 @@ block content
                             | Up until university, I was a fully self-taught programmer.
                 div.tl-item
                     div.tl-item-content
+                        div.tl-img
+                            img(src="images/hypixel.webp")
                         h3.tl-title Hypixel Volunteer
                         h4.subtext June 2014 - Present
                         p I started volunteering for the Hypixel Minecraft Network in 2014 as a "JR Helper". Since then
