--- a/public/stylesheets/style121118.css
+++ b/public/stylesheets/style121118.css
@@ -368,4 +368,4 @@ button {
   button:disabled {
     color: #c4c4c4; }
 
-/*# sourceMappingURL=style121118.css18.css.map */
+/*# sourceMappingURL=style121118.css.map */
