--- a/views/index.jade
+++ b/views/index.jade
@@ -60,7 +60,7 @@ block head
 
         // Load image post-HTML parse for faster render speeds
         $("#me").ready(function() {
-            $("#me").attr("src", "images/buggy.webp");
+            $("#me").attr("src", "images/me.webp");
         })
 
         $("#carousel").ready(function() {
