updated color in html

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html
     // /Includes
     // Meta data
 
-    - defaultColor = "#31A56F"
+    - defaultColor = "#445443"
     - pageName = "Erik Roberts"
     - description = "Hi, my name is Erik Roberts, full-stack developer."
     - pageUrl = "https://bugg.co/"
