Added backwards compatibility support for browsers that don't support webp

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,18 +30,18 @@ html
     meta(name="msapplication-starturl", content=pageUrl)
 
     link(rel="apple-touch-icon" sizes="256x256" href="/favicon.ico")
-    link(rel="apple-touch-icon" sizes="360x360" href="/images/buggy.jpg")
-    meta(name="msapplication-TileImage" content="/images/buggy.jpg")
+    link(rel="apple-touch-icon" sizes="360x360" href="/images/buggy.png")
+    meta(name="msapplication-TileImage" content="/images/buggy.png")
     meta(name="twitter:card" content="summary")
     meta(name="twitter:site" content="@bugfroggy")
-    meta(name="twitter:image" content="/images/buggy.jpg")
+    meta(name="twitter:image" content="/images/buggy.png")
     meta(name="twitter:title" content=pageName)
     meta(name="twitter:description" content=description)
     meta(property="og:type" content="website")
     meta(property="og:title" content=pageName)
     meta(property="og:description" content=description)
     meta(property="og:url" content=pageUrl)
-    meta(property="og:image" content="/images/buggy.jpg")
+    meta(property="og:image" content="/images/buggy.png")
     meta(name="theme-color", content=defaultColor)
     meta(name="msapplication-TileColor", content=defaultColor)
     meta(name="msapplication-navbutton-color", content=defaultColor)
