--- a/views/index.jade
+++ b/views/index.jade
@@ -21,6 +21,14 @@ block head
             });
         }
 
+        /**
+        * Called by img onerror attribute; used for backwards compatibility with browsers that don't support webp
+        */
+        function imgLoadError(elem) {
+            elem.onerror = "";
+            elem.src = elem.src.substr(0, elem.src.length - 4) + "png";
+        }
+
         function getEmail(token) {
             $.ajax({
                 url: "captcha",
@@ -165,7 +173,7 @@ block content
     div#intro
         div#intro-content
             h1#name Hi, I'm Erik
-            img#me(src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=")
+            img#me(src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=", onerror="imgLoadError(this)")
 
             div#carousel
                 div.current.slide
@@ -211,7 +219,7 @@ block content
                             a(href="https://minecraft.curseforge.com/projects/animated-crosshair") Animated Crosshair
 
                 div.right-image
-                    img(src="images/quickplay.webp").screenshot
+                    img(src="images/quickplay.webp", onerror="imgLoadError(this)").screenshot
                     p.subtext Screenshot of Quickplay Minecraft Mod
             div#karaoke.tab-content
                 div.left-text
@@ -229,7 +237,7 @@ block content
                     p
                         a(href="https://hypixelkaraoke.me/") Click here to visit it.
                 div.right-image
-                    img(src="images/karaoke-dashboard.webp").screenshot
+                    img(src="images/karaoke-dashboard.webp", onerror="imgLoadError(this)").screenshot
                     p.subtext Screenshot of the team's private dashboard for handling events
             div#watchdogger.tab-content
                 div.left-text
@@ -247,7 +255,7 @@ block content
                     p
                         a(href="https://bugg.co/watchdogger") Click here to visit it.
                 div.right-image
-                    img(src="images/watchdog.webp").screenshot
+                    img(src="images/watchdog.webp", onerror="imgLoadError(this)").screenshot
             //div#image-sharing.tab-content
             //    div
             //        h3 Image Sharing
@@ -265,7 +273,7 @@ block content
                 div.tl-item
                     div.tl-item-content
                         div.tl-img
-                            img(src="images/young.webp")
+                            img(src="images/young.webp", onerror="imgLoadError(this)")
                         h3.tl-title Birthday
                         h4.subtext September 10th, 1999
                         //- - let an = [8,11,18,80,81,82,83,84,85,86,87,88,89].includes(age) ? "an" : "a"
@@ -283,7 +291,7 @@ block content
                 div.tl-item
                     div.tl-item-content
                         div.tl-img
-                            img(src="images/php.webp")
+                            img(src="images/php.webp", onerror="imgLoadError(this)")
                         h3.tl-title First Programming Language
                         h4.subtext ca. 2014
                         p I started to learn programming at the early age of 13. Websites were fascinating to me and
@@ -293,7 +301,7 @@ block content
                 div.tl-item
                     div.tl-item-content
                         div.tl-img
-                            img(src="images/hypixel.webp")
+                            img(src="images/hypixel.webp", onerror="imgLoadError(this)")
                         h3.tl-title Hypixel Volunteer
                         h4.subtext June 2014 - Present
                         p I started volunteering for the Hypixel Minecraft Network in 2014 as a "JR Helper". Since then
@@ -310,7 +318,7 @@ block content
                 div.tl-item
                     div.tl-item-content
                         div.tl-img
-                            img(src="images/nova.webp")
+                            img(src="images/nova.webp", onerror="imgLoadError(this)")
                         h3.tl-title Northern Virginia Community College
                         h4.subtext August 2017 - May 2018
                         p As an intermediary between graduating highschool and attending a four year university, I decided
@@ -319,7 +327,7 @@ block content
                 div.tl-item
                     div.tl-item-content
                         div.tl-img
-                            img(src="images/rpi.webp")
+                            img(src="images/rpi.webp", onerror="imgLoadError(this)")
                         h3.tl-title Rensselaer Polytechnic Institute
                         h4.subtext August 2018 - Present
                         p I started attending Rensselaer Polytechnic Institute in the 2018 Fall semester, located in
