--- a/public/stylesheets/style121618.sass
+++ b/public/stylesheets/style121618.sass
@@ -325,9 +325,13 @@ hr
     position: relative
     z-index: 100
     background-color: #ffffff
-  #source
+  #links
+    p
+      display: inline-block
+      &#privacy-link
+        margin-left: 15px
     float: right
-    margin-right: 5%
+    margin: 0 5% 0 0
     padding: 5px
     display: inline-block
     position: relative
@@ -358,4 +362,28 @@ button
     padding-top: 0.9em
   &:disabled
     color: lighten($grayColor, 10%)
+
+#privacy
+  margin-top: 30px
+
+
+#error-block
+  h1
+    margin-top: 25px
+  margin-top: 25px
+  padding: 25px
+  background-color: white
+  text-align: center
+  .stack
+    text-align: left
+    margin: auto
+    @media(max-width: $mobileSize)
+      width: calc(100% - 25px)
+#error-title
+  margin-bottom: 0
+.stack
+  background-color: #d0d0d0
+  width: 60%
+  padding: 7px
+  overflow-x: scroll
 
