--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,9 +5,35 @@ html
 
     link(rel='stylesheet', href='/stylesheets/style121618.css')
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
-    script(src="fa/fontawesome.min.js", defer)
-    script(src="fa/fontawesome-all.min.js", defer)
-    script(src="fa/fa-custom.js", defer)
+    script(src="/fa/fontawesome.min.js", defer)
+    script(src="/fa/fontawesome-all.min.js", defer)
+    script(src="/fa/fa-custom.js", defer)
+
+    // Global scripts
+    script.
+      // Load font stylesheet
+      $("head").ready(function () {
+        $("<link>")
+                .attr("rel", "stylesheet")
+                .attr("type", "text/css")
+                .attr("href", "https://fonts.googleapis.com/css?family=Bitter")
+                .appendTo($("head"));
+      });
+
+      // Handle smooth scrolling on button click
+      $(document).ready(function () {
+
+        $("a").click(function (event) {
+          if (this.hash !== "") {
+            event.preventDefault();
+
+            $("html, body").animate({
+              scrollTop: $(this.hash).offset().top,
+              duration: 500
+            });
+          }
+        });
+      });
 
     // /Includes
     // Meta data
