moved footer to its own file

--- a/views/error.jade
+++ b/views/error.jade
@@ -9,11 +9,4 @@ block content
         h4 Here's what went wrong:
         pre.stack #{error.stack}
 
-    div#footer
-      p#copyright Copyright © Erik Roberts 2018
-      div#links
-        p#source
-          a(href="https://github.com/bugfroggy/Portfolio") Source
-        p#privacy-link
-          a(href="/privacy") Privacy
-      hr
+    include footer
