--- a/views/index.jade
+++ b/views/index.jade
@@ -403,11 +403,4 @@ block content
                     a(href="https://github.com/robere2") Github
                     a(href="https://hypixel.net/members/52450") Hypixel
         div#recaptcha.g-recaptcha
-        div#footer
-            p#copyright Copyright © Erik Roberts 2018
-            div#links
-                p#source
-                  a(href="https://github.com/bugfroggy/Portfolio") Source
-                p#privacy-link
-                    a(href="/privacy") Privacy
-            hr
+        include footer
