--- a/views/privacy.jade
+++ b/views/privacy.jade
@@ -35,11 +35,4 @@ block content
                 | do not hesitate to contact me if you wish to confirm this or have any questions.
 
             a(href="/") Go home
-        div#footer
-            p#copyright Copyright © Erik Roberts 2018
-            div#links
-                p#source
-                    a(href="https://github.com/bugfroggy/Portfolio") Source
-                p#privacy-link
-                    a(href="/privacy") Privacy
-            hr
+        include footer
